objects/Account.object
<CustomObject>
    <fields>
        <fullName>Churn_Form_URL__c</fullName>
        <description>Populates churn form survey URL for this Account</description>
        <formula>&quot;https://survey.alchemer.eu/s3/90428618/Customer-Churn-Form?AccountID=&quot;&amp; ID_Long__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populates churn form survey URL for this Account</inlineHelpText>
        <label>Churn Form URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Aliases__c</fullName>
        <label>Domain Aliases</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if email has a free provider</description>
        <inlineHelpText>Check if email has a free provider</inlineHelpText>
        <label>Email Provider_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_MQL_Date__c</fullName>
        <description>Field to capture the earliest MQL of the contacts associated to the account</description>
        <label>Account First MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_SQL_Date__c</fullName>
        <description>Field to capture the first SQL of the opp associated to the account</description>
        <label>Account First SQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Industry_Group__c</fullName>
        <label>Industry Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <inlineHelpText>Internal Sales &amp;  CS Notes</inlineHelpText>
        <label>Internal Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_type__c</fullName>
        <label>Reference Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reference us to prospects</fullName>
                    <label>Sales Reference</label>
                </value>
                <value>
                    <fullName>Beta Test</fullName>
                </value>
                <value>
                    <fullName>Discovery Interview</fullName>
                </value>
                <value>
                    <fullName>Use the logo</fullName>
                    <label>Logo Use</label>
                </value>
                <value>
                    <fullName>Get testimonial</fullName>
                    <label>Content Collaboration</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Slide</fullName>
                </value>
                <value>
                    <fullName>Customer Story</fullName>
                </value>
                <value>
                    <fullName>Event Speaker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Holdback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Account held back from territory transition until Holdback Expiration Date</inlineHelpText>
        <label>Sales Holdback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for your target accounts for 6sense.</inlineHelpText>
        <label>6sense Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_Tech_Zendesk__c</fullName>
        <label>CB-Tech-Zendesk</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Tier_New_del__c</fullName>
        <description>Tier 5: &lt;10k
Tier 4: 10K-30K
Tier 3: 30-75K
Tier 2: 75-150K
Tier 1: &gt;150K</description>
        <formula>IF( Account_ARR__c &gt;150000,&quot;Tier 1: $150K+&quot;,
IF( Account_ARR__c &gt;75000,&quot;Tier 2: $75K-$149,999&quot;,
IF( Account_ARR__c &gt;30000,&quot;Tier 3: $30K-$74,999&quot;,
IF( Account_ARR__c &gt;10000,&quot;Tier 4: $10K-$29,999&quot;,
IF( Account_ARR__c &gt; 0,&quot;Tier 5: &lt;$3K&quot;,
IF( Max_ARR__c &gt; 150000,&quot;Tier 1: $150K+&quot;,
IF( Max_ARR__c &gt;75000,&quot;Tier 2: $75K-$149,999&quot;,
IF( Max_ARR__c &gt;30000,&quot;Tier 3: $30K-$74,999&quot;,
IF( Max_ARR__c &gt;10000,&quot;Tier 4: $10K-$29,999&quot;,
IF( Max_ARR__c &gt; 0,&quot;Tier 5: &lt;$10K&quot;,
&quot;&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer Success Tier depending on the Account ARR.
Tier 5: &lt;10k
Tier 4: 10K-30K
Tier 3: 30-75K
Tier 2: 75-150K
Tier 1: &gt;150K</inlineHelpText>
        <label>CS Tier (New)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Team__c</fullName>
        <formula>Text(CreatedBy.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Created by Team</inlineHelpText>
        <label>Created by Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <formula>IF( Bad_Account__c ,&quot;9.9 Bad Account&quot;,
if(  Account_ARR__c   &gt; 0 ||  today() - First_Opportunity_Won_Date__c &lt; 7, &quot;1.0 Customer&quot;,
IF( IsPickVal(Type,&quot;Competitor&quot;), &quot;9.0 Competitor&quot;,

   IF ( Max_Open_Opp_Stage__c &gt; 1, &quot;2.0 Pipeline&quot;,

     IF (  of_Live_Opps__c &gt; 0  , &quot;3.0 Pre-Pipeline&quot;,
        IF( Not(IsBlank(  First_Opportunity_Won_Date__c )) ||     IsPIckVal( Customer_Life_Cycle_Stage__c ,&quot;Churn&quot;), &quot;5.0 Churn&quot;,
           IF( Not(IsBlank(Max_Opportunity_Lost_Date__c )), &quot;4.0 Lost&quot;,&quot;6.0 Prospect&quot;))

)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1.0 Customer
2.0 Pipeline (Opportunity w Stage 2+)
3.0 Pre-Pipeline (Opportunity w Stage &lt;2)
4.0 Lost (Only Closed Lost Opportunities)
5.0 Churn (Churned Customer)
6.0 Prospect (No Opportunities)
9.9 Bad Account (Disqualified Account)</inlineHelpText>
        <label>Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DQ_Last_Updated__c</fullName>
        <inlineHelpText>Last date Data Quality was verified</inlineHelpText>
        <label>DQ Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Addresses__c</fullName>
        <label>Email Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employees_Range__c</fullName>
        <label>Employees Range_Delete</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Re_Route__c</fullName>
        <label>Manual Re-Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Self Service</fullName>
                </value>
                <value>
                    <fullName>2. Smart Touch</fullName>
                </value>
                <value>
                    <fullName>3. Solution Sales</fullName>
                </value>
                <value>
                    <fullName>Wrongly Created Account  (do not route again)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Notes__c</fullName>
        <label>Marketing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ownership_Check__c</fullName>
        <formula>IF(Owner_Same_As_Territory_Owner__c,&quot;Correct Owner&quot;,
   IF( Sales_Holdback__c ,&quot;Holdback&quot;, 
      IF( IsPickVal(Owner.Team__c,&quot;AM-NA&quot;) &amp;&amp; Customer_Status__c = &quot;1.0 Customer&quot;,&quot;AM Customer&quot;,
IF(contains(text( Sales_territory__c ),&quot;Open&quot;),&quot;Open/Incomplete Territory&quot;,
IF(contains(text( Sales_territory__c ),&quot;Missing&quot;),&quot;Open/Incomplete Territory&quot;,&quot;&quot;))


)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>checks if territory AE is the account owner</inlineHelpText>
        <label>Ownership Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Present_Segment__c</fullName>
        <formula>IF(of_paid_users__c &gt; 10, &quot;Enterprise&quot;, 
IF(of_paid_users__c &gt; 2,&quot;Core&quot;, &quot;Growth&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Present Segment_Delete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sponsor__c</fullName>
        <label>Product Sponsor</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReOrg_Territory__c</fullName>
        <inlineHelpText>Temp Field for Re-Org Summer 2020</inlineHelpText>
        <label>ReOrg Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remove_from_ABM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove from ABM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal Manager for Tier 4 and 5 Accounts</description>
        <inlineHelpText>Renewal Manager for Tier 4 and 5 Accounts</inlineHelpText>
        <label>Renewal Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsXUHk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_territory__c</fullName>
        <inlineHelpText>Assigned Sales Territory</inlineHelpText>
        <label>Sales Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Success Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_AE_ID__c</fullName>
        <formula>Territory_AE__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory AE ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Heading__c</fullName>
        <label>Admin Test Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit__c</fullName>
        <formula>CASE(mk_customer_fit_segment__c,
&apos;very good&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) + IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) + IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20), 
&apos;good&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) + IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20), 
&apos;medium&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20), 
&apos;low&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/cross.png&quot;, &quot;Star&quot;, 20, 20),
&quot;&quot;
)</formula>
        <label>MK Customer Fit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Assigned_Date__c</fullName>
        <inlineHelpText>Date this account was assigned to an Account Manager</inlineHelpText>
        <label>AM Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Contacts__c</fullName>
        <inlineHelpText>Total Number of contacts on the account (Managed by Rollup Helper)</inlineHelpText>
        <label>Account Contacts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment_Delete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CB_Address_Match__c</fullName>
        <description>Field that tells us if the Billing Address matches the address Clearbit has on file by comparing to the Clearbit.Address fields.</description>
        <formula>AND(
BillingCity = cbit__Clearbit__r.cbit__CompanyGeoCity__c ,
BillingState = cbit__Clearbit__r.cbit__CompanyGeoState__c ,
BillingPostalCode = cbit__Clearbit__r.cbit__CompanyGeoPostalCode__c ,
BillingCountry = cbit__Clearbit__r.cbit__CompanyGeoCountry__c
/*,OR(
BillingStreet = cbit__Clearbit__r.cbit__CompanyGeoStreetNumber__c &amp; &quot; &quot; &amp; cbit__Clearbit__r.cbit__CompanyGeoStreetName__c &amp; &quot; &quot; &amp; cbit__Clearbit__r.cbit__CompanyGeoSubPremise__c ,
BillingStreet = cbit__Clearbit__r.cbit__CompanyGeoStreetName__c)*/
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Address Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Maturity__c</fullName>
        <label>Company Maturity_Delete</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SaaS B2B</fullName>
                </value>
                <value>
                    <fullName>SaaS B2C</fullName>
                </value>
                <value>
                    <fullName>SaaS Marketplace</fullName>
                </value>
                <value>
                    <fullName>Hardware / Physical Products</fullName>
                </value>
                <value>
                    <fullName>Early-Stage Startup</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Mid-Market Company</fullName>
                </value>
                <value>
                    <fullName>Enterprise Company</fullName>
                </value>
                <value>
                    <fullName>Mature Product Organization</fullName>
                </value>
                <value>
                    <fullName>Novice Product Organization</fullName>
                </value>
                <value>
                    <fullName>No PMs on Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_CSM_Team__c</fullName>
        <formula>IF ( Account_ARR__c &lt;= 0, &quot;&quot;,
  IF (Projects_with_Contracts__c =0,&quot;Self Service-No CSM&quot;,
    IF (  Account_ARR__c  &lt; 3000, If ( NumberOfEmployees &gt; 500, &quot;Scale-CSM&quot;,&quot;&quot;),
      IF ( Account_ARR__c &gt; 25000, &quot;Ent-CSM&quot;,
        IF ( Account_ARR__c &gt; 10000,&quot;Comm-CSM&quot;,&quot;Scale-CSM&quot;)

))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates which CSM Tier should be assigned</inlineHelpText>
        <label>Correct CSM Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Owner__c</fullName>
        <formula>OwnerId =  CreatedBy.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account created by current owner</inlineHelpText>
        <label>Created by Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Ends__c</fullName>
        <label>Fiscal Year Ends</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Notes__c</fullName>
        <inlineHelpText>Lean Data Routing Notes</inlineHelpText>
        <label>LD Routing Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Status__c</fullName>
        <label>Marketing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Stalled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting for customer approval</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_Account__c</fullName>
        <inlineHelpText>6sense priority accounts</inlineHelpText>
        <label>Priority Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Priority 1</fullName>
                    <label>P1 Sales Targets</label>
                </value>
                <value>
                    <fullName>Priority 2</fullName>
                    <label>P2 Digital Transformation</label>
                </value>
                <value>
                    <fullName>P1 Strategic Accounts</fullName>
                </value>
                <value>
                    <fullName>P2 Jira Accounts</fullName>
                </value>
                <value>
                    <fullName>P2 Digital-First Healthcare</fullName>
                </value>
                <value>
                    <fullName>P2 Traditional Healthcare</fullName>
                </value>
                <value>
                    <fullName>P2 Finance</fullName>
                </value>
                <value>
                    <fullName>P3 ICP Experiment - Prospects</fullName>
                </value>
                <value>
                    <fullName>P3 ICP Experiment - Customers</fullName>
                </value>
                <value>
                    <fullName>P3 ICP Experiment - Dupes?</fullName>
                </value>
                <value>
                    <fullName>P3 ICP Experiment - Prospects - 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Maturity__c</fullName>
        <description>For ICP</description>
        <label>Product Maturity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Workflows</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZI_Funding_Round__c</fullName>
        <inlineHelpText>Zoom Info Funding Round (e.g. A-Round, ...IPO)</inlineHelpText>
        <label>ZI-Funding Round</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZI_Tech_Intercom__c</fullName>
        <inlineHelpText>Per ZoomInfo, Account has Intercom</inlineHelpText>
        <label>ZI-Tech-Intercom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Tech_Roadmunk__c</fullName>
        <label>ZI-Tech-Roadmunk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account6QA6sense__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The 6QA status of the account for the product.

The values are either:
1 = 6QA
0= Not 6QA</description>
        <label>6sense 6QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cbit_CompanyType__c</fullName>
        <label>Company Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Owner_Active__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks if Account Owner Is Active</inlineHelpText>
        <label>Acct Owner Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_Email_Provider__c</fullName>
        <formula>cbit__Clearbit__r.cbit__CompanyEmailProvider__c</formula>
        <inlineHelpText>Domain is free email provider?</inlineHelpText>
        <label>CB Email Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_State_Province__c</fullName>
        <description>Field that captures the previous state/province value when any field of the Billing Address is updated</description>
        <label>Previous State/Province</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Street_Address__c</fullName>
        <description>Field that captures the previous street address value when any field of the Billing Address is updated</description>
        <label>Previous Street Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Tech_Amplitude__c</fullName>
        <label>CB-Tech-Amplitude</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Type_new__c</fullName>
        <formula>IF( Account_ARR__c &gt; 1,
IF( Projects_with_Contracts__c =0,&quot;Subscription&quot;,&quot;Contract&quot;),&quot;Not Customer&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Executive Sponsor on the account</inlineHelpText>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sponsored_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opps_New_Business__c</fullName>
        <label># Opps - New Business</label>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Planning_to_Churn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Zendesk ticket with the Tag &apos;Churn&apos;</description>
        <inlineHelpText>Has Zendesk ticket with the Tag &apos;Churn&apos;</inlineHelpText>
        <label>Planning to Churn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_With_Zendesk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync With Zendesk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_current_makers__c</fullName>
        <label># of current makers</label>
        <summarizedField>Project__c.Project_makers__c</summarizedField>
        <summaryFilterItems>
            <field>Project__c.Current_Backend_Stage__c</field>
            <operation>equals</operation>
            <value>Active Contract,Active Subscription</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Team__c</fullName>
        <formula>Text(Owner.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Owner&apos;s Team Name</inlineHelpText>
        <label>Account Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Tech_Monday_com__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CB-Tech-Monday.com</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_Tech_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CB-Tech-Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_Zip_Postal_Code__c</fullName>
        <description>Field that captures the previous zip/postal code value when any field of the Billing Address is updated</description>
        <label>Previous Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DQ_Has_Product_Ops__c</fullName>
        <label>DQ Has Product Ops</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_Author__c</fullName>
        <label>Description Author</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Trigger__c</fullName>
        <inlineHelpText>Trigger for LD Routing</inlineHelpText>
        <label>LD Routing Trigger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Enrich_Date__c</fullName>
        <description>Triggers when a record was manually enriched.</description>
        <label>Manual Enrich Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Open_Opp_Stage__c</fullName>
        <inlineHelpText>Highest stage number of open opp, new business</inlineHelpText>
        <label>Max Open Opp Stage</label>
        <summarizedField>Opportunity.Stage_Numeric__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Projects__c</fullName>
        <label># Projects</label>
        <summaryForeignKey>Project__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Renewal_Close_Date__c</fullName>
        <inlineHelpText>Close date of any renewal opportunity</inlineHelpText>
        <label>Renewal Close Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDR_Holdback_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>SDR Holdback for FY 2021 Territory transition</inlineHelpText>
        <label>SDR Holdback Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SegmentationFY2021__c</fullName>
        <description>Looks at the employee count and country and returns segment abbreviated value based on criteria at a given point in time. Used in LeanData. Admin only.

Formula prior to July 2022 
New Segmentation for FY 2021:
ESB: 0-50
SMB: 51 -500
MM: 501 - 5000
EN: &gt; 5001</description>
        <formula>/*Formula prior to July 2022
&quot;IF( Bad_Account__c , &quot;&quot;ESB&quot;&quot;,

IF( Max_Employees__c &lt; 51,&quot;&quot;ESB&quot;&quot;,
IF( Max_Employees__c &lt; 501,&quot;&quot;SMB&quot;&quot;,
IF( Max_Employees__c &lt; 5001,&quot;&quot;MM&quot;&quot;,&quot;&quot;EN&quot;&quot;))))&quot; */


IF( OR(Bad_Account__c,Max_Employees__c &lt; 51)  , &quot;ESB&quot;,

IF(
CASE( BillingCountry,
&quot;Guadeloupe&quot;,1,
&quot;Afghanistan&quot;,1,
&quot;Antigua and Barbuda&quot;,1,
&quot;Aruba&quot;,1,
&quot;Bahamas&quot;,1,
&quot;Barbados&quot;,1,
&quot;British Virgin Islands&quot;,1,
&quot;Cayman Islands&quot;,1,
&quot;Cuba&quot;,1,
&quot;Dominica&quot;,1,
&quot;Dominican Republic&quot;,1,
&quot;Grenada&quot;,1,
&quot;Guyana&quot;,1,
&quot;Haiti&quot;,1,
&quot;Jamaica&quot;,1,
&quot;Montserrat&quot;,1,
&quot;Saint Kitts and Nevis&quot;,1,
&quot;Saint Lucia&quot;,1,
&quot;Saint Vincent and the Grenadines&quot;,1,
&quot;Trinidad and Tobago&quot;,1,
&quot;Turks and Caicos&quot;,1,
&quot;Puerto Rico&quot;,1,
&quot;Belize&quot;,1,
&quot;Costa Rica&quot;,1,
&quot;El Salvador&quot;,1,
&quot;Guatemala&quot;,1,
&quot;Honduras&quot;,1,
&quot;Nicaragua&quot;,1,
&quot;Panama&quot;,1,
&quot;Bermuda&quot;,1,
&quot;Mexico&quot;,1,
&quot;Argentina&quot;,1,
&quot;Bolivia&quot;,1,
&quot;Chile&quot;,1,
&quot;Colombia&quot;,1,
&quot;Ecuador&quot;,1,
&quot;Paraguay&quot;,1,
&quot;Peru&quot;,1,
&quot;Suriname&quot;,1,
&quot;Uruguay&quot;,1,
&quot;Venezuela&quot;,1,
&quot;French Guiana&quot;,1,
&quot;Curacao&quot;,1,
&quot;Bangladesh&quot;,1,
&quot;Bhutan&quot;,1,
&quot;India&quot;,1,
&quot;Kazakhstan&quot;,1,
&quot;Kyrgyzstan&quot;,1,
&quot;Maldives&quot;,1,
&quot;Nepal&quot;,1,
&quot;Pakistan&quot;,1,
&quot;Sri Lanka&quot;,1,
&quot;Turkmenistan&quot;,1,
&quot;Uzbekistan&quot;,1,
&quot;China&quot;,1,
&quot;Hong Kong&quot;,1,
&quot;Japan&quot;,1,
&quot;Mongolia&quot;,1,
&quot;South Korea&quot;,1,
&quot;Taiwan&quot;,1,
&quot;Cambodia&quot;,1,
&quot;Indonesia&quot;,1,
&quot;Laos&quot;,1,
&quot;Malaysia&quot;,1,
&quot;Myanmar&quot;,1,
&quot;Philippines&quot;,1,
&quot;Singapore&quot;,1,
&quot;Thailand&quot;,1,
&quot;Vietnam&quot;,1,
&quot;Papua New Guinea&quot;,1,
&quot;Tonga&quot;,1,
&quot;Cocos (Keeling) Islands&quot;,1,
&quot;Australia&quot;,1,
&quot;New Zealand&quot;,1,
&quot;Canada&quot;,1,
&quot;US Virgin Islands&quot;,1,
&quot;United States&quot;,1,
&quot;American Samoa&quot;,1,0) = 1,
IF(Max_Employees__c &lt; 1001, &quot;SMB&quot;, &quot;EN&quot;),

IF(Max_Employees__c &lt; 501,&quot;SMB&quot;,

IF(Max_Employees__c &lt; 5001,&quot;MM&quot;,&quot;EN&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Segmentation by # of Employees in a Company, Source: Clearbit
NOAM + RoW
ESB: 1-50
SMB: 51-1000
EN: &gt; 1,000

EMEA
ESB: 1-50
SMB: 51-500
MM: 501-5,000
EN: &gt; 5,000</inlineHelpText>
        <label>zz Segmentation FY2021 - Delete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Id__c</fullName>
        <label>Slintel Company Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What_is_your_email__c</fullName>
        <description>What is your email?</description>
        <inlineHelpText>What is your email?</inlineHelpText>
        <label>What is your email?</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ZI_Has_ZoomInfo_ID__c</fullName>
        <formula>DOZISF__ZoomInfo_Id__c &lt;&gt;&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Has ZoomInfo ID</inlineHelpText>
        <label>ZI Has ZoomInfo ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZI_Tech_AzurDevOps__c</fullName>
        <label>ZI-Tech-AzurDevOps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_External_ID__c</fullName>
        <label>Account External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Segmentation__c</fullName>
        <label>Actual Segmentation_Delete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Segmentation</valueSetName>
        </valueSet>
    </fields>
</CustomObject>